# Ven0m0-Adblock

./: .aglintignore  .aglintrc.yaml  .aglintrc.yml  .editorconfig  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .lefthook.yml  .markdownlint-cli2.jsonc  .markdownlint.json  .oxlintrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .swcrc  .yamllint.yml  3rd-party.txt  AGENTS.md  Ad Removal List for Unusual Ads  Ad Removal List for Unusual Ads.txt  Brave Unbreak  CLAUDE.md  Combinatiom  Combination  Combination Main.txt  Combination Minimal.txt  Combination No YT  Combination light  Combination-Minimal.txt  Combination-No-YT.txt  Combination.txt  DEPENDENCY-AUDIT.md  Easylist Germany without Network Filters.txt  Easylist Germany.txt  Easylist.txt  Easyprivacy.txt  EmptyPaddingRemover.txt  Facebook.xt  FacebookAnnoyances.txt  (+57 more)
.cursor/: environment.json
.github/: README.md  actionlint.yaml  copilot-instructions.md  dependabot.yml
.kilo/: kilo.json  package.json
.omc/: project-memory.json
.serena/: project.yml
Scripts/: BASH_OPTIMIZATIONS.md  Esbuild.sh  MetricRecipe.py  QUALITY_CHECK_README.md  README.md  Rspack.sh  __init__.py  aglint.sh  automerge-open-prs.sh  automerge_open_prs.py  build-all-js.sh  build-all.sh  build-lists.sh  build.py  build.sh  cgo.sh  closurejs.sh  common.py  common.ts  deduplicate.py  deduplicate.ts  deduplicate_across_files.py  hostlist-build.sh  hosts-config  hosts-creator.sh  hosts_creator.py  kompressor.sh  lib-common.sh  minify-js.sh  minify.sh  minifyl-js.sh  move-pure-domains.py  move_pure_domains.py  (+23 more)
(+206 files in other folders)
