[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ven0m0-adblock"
version = "1.0.0"
description = "Ad-blocking filter list utilities"
requires-python = ">=3.13"
dependencies = [
  "aiohttp>=3.13.3",
  "aiofiles>=25.1.0",
]

[project.scripts]
adblock-deduplicate = "Scripts.deduplicate:main"
adblock-update = "Scripts.update_lists:main_sync"
adblock-move-domains = "Scripts.move_pure_domains:main"

[tool.setuptools]
packages = ["Scripts"]

[tool.uv]
managed = true

[dependency-groups]
dev = [
    "prek>=0.3.4",
    "ruff>=0.15.4",
]
